[gd_scene load_steps=3 format=3 uid="uid://cbuv6gddfnr35"]

[ext_resource type="Script" uid="uid://b1lflxk0idk1i" path="res://scenes/ui/PvPScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="PvPScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="TopPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="TargetSearch" type="LineEdit" parent="TopPanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Hedef kullanƒ±cƒ± adƒ±..."

[node name="SearchButton" type="Button" parent="TopPanel"]
layout_mode = 2
text = "üîç Ara"

[node name="RandomButton" type="Button" parent="TopPanel"]
layout_mode = 2
text = "üé≤ Rastgele"

[node name="TargetList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -250.0
offset_right = 320.0
offset_bottom = 250.0
grow_vertical = 2

[node name="Title" type="Label" parent="TargetList"]
layout_mode = 2
text = "Hedefler"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TargetList"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TargetList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TargetDetailsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="TargetDetailsPanel"]
layout_mode = 2

[node name="Username" type="Label" parent="TargetDetailsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Username"
horizontal_alignment = 1

[node name="Level" type="Label" parent="TargetDetailsPanel/VBox"]
layout_mode = 2
text = "Lv. 1"
horizontal_alignment = 1

[node name="Power" type="Label" parent="TargetDetailsPanel/VBox"]
layout_mode = 2
text = "Power: 0"

[node name="Defense" type="Label" parent="TargetDetailsPanel/VBox"]
layout_mode = 2
text = "Defense: 0"

[node name="Gold" type="Label" parent="TargetDetailsPanel/VBox"]
layout_mode = 2
text = "Gold: 0"

[node name="Spacer" type="Control" parent="TargetDetailsPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="WinChance" type="Label" parent="TargetDetailsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Win Chance: 50%"
horizontal_alignment = 1

[node name="AttackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 150.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "‚öîÔ∏è SALDIRI!"

[node name="ResultPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ResultPopup"]
layout_mode = 2

[node name="Outcome" type="Label" parent="ResultPopup/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "VICTORY!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="ResultPopup/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GoldChange" type="Label" parent="ResultPopup/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "+100 Gold"
horizontal_alignment = 1

[node name="RatingChange" type="Label" parent="ResultPopup/VBox"]
layout_mode = 2
text = "+10 Rating"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="ResultPopup/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="ResultPopup/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Kapat"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "‚óÄ Geri"
